--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
-    <div id="container"></div>
 
-
+    <div class="container-wrapper">
+        <h1 class="h1">Etch-a-Sketch</h1>
+        <div class="btn-container">
+            <button id="btn">new sketch</button>
+        </div>
+        <div id="container"></div>
+    </div>
     <script src="myscripts.js"></script>
 </body>
 </html>
