Randomized Colors & Darkening
- Colors randomly generated on Etch-a-Sketch Pad
- On Multiple hover, color gets darker and at 10 instances grid is black

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1 class="h1">Etch-a-Sketch</h1>
         <div class="btn-container">
             <button id="btn">new sketch</button>
+            <button id="reset-btn">reset</button>
         </div>
         <div id="container"></div>
     </div>
